tests/ui/imports/ambiguous-10.stderr
error[E0659]: `Token` is ambiguous
  --> $DIR/ambiguous-10.rs:15:9
   |
LL | fn c(_: Token) {}
   |         ^^^^^ ambiguous name
   |
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `Token` could refer to the enum imported here
  --> $DIR/ambiguous-10.rs:13:5
   |
LL | use crate::a::*;
   |     ^^^^^^^^^^^
   = help: consider adding an explicit import of `Token` to disambiguate
note: `Token` could also refer to the enum imported here
  --> $DIR/ambiguous-10.rs:14:5
   |
LL | use crate::b::*;
   |     ^^^^^^^^^^^
   = help: consider adding an explicit import of `Token` to disambiguate

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0659`.
